--- a/Portafolio Glassmorphism/Styles/index.css
+++ b/Portafolio Glassmorphism/Styles/index.css
@@ -199,14 +199,14 @@ body {
   filter: brightness(1.75);
 }
 
+/* About me section Css  */
 .intome {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: 1fr;
   grid-column-gap: 25px;
   grid-row-gap: 0px;
-  margin: 3.5rem auto 3.5rem auto;
-  margin-top: 15rem;
+  margin: 15rem auto 10rem auto;
   width: 75%;
   height: 50rem;
 }
@@ -219,7 +219,6 @@ body {
     rgba(195, 46, 240, 0.3) -10px -10px, rgba(195, 46, 240, 0.2) -15px -15px,
     rgba(195, 46, 240, 0.1) -20px -20px, rgba(195, 46, 240, 0.05) -25px -25px;
   backdrop-filter: blur(10px);
-  border-radius: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -256,7 +255,6 @@ body {
     rgba(195, 46, 240, 0.3) 10px 10px, rgba(195, 46, 240, 0.2) 15px 15px,
     rgba(195, 46, 240, 0.1) 20px 20px, rgba(195, 46, 240, 0.05) 25px 25px;
   backdrop-filter: blur(10px);
-  border-radius: 1rem;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -281,4 +279,136 @@ body {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   filter: brightness(1.75);
+}
+
+.skills {
+  width: 75%;
+  height: 80rem;
+  margin: 15rem auto 15rem auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 15px;
+  grid-row-gap: 0px;
+  column-gap: 2rem;
+}
+
+.card {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 2rem;
+  display: flex;
+  align-items: center;
+  border-radius: 2rem;
+  transition: 0.5s;
+  font-size: 3rem;
+}
+
+.card .circle {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 2rem;
+  overflow: hidden;
+}
+
+.card .circle::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #FFE000;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #799F0C, #FFE000);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #799F0C, #FFE000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  clip-path: circle(120px at center);
+  transition: 0.5s;
+}
+
+.card:hover .circle:before {
+  background: #FFE000;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #799F0C, #FFE000);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #799F0C, #FFE000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  clip-path: circle(800px at center);
+}
+
+.card img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 30rem;
+  pointer-events: none;
+  transition: 0.5s;
+  filter: brightness(1.5);
+}
+
+.card:hover img {
+  top: 100%;
+  height: 30rem;
+}
+
+.card .content {
+  position: absolute;
+  width: 75%;
+  top: 0;
+  left: 12.5%;
+  /* width: 50%; */
+  padding: 2rem  2rem 2rem 2rem;
+  transition: 0.5s;
+  opacity: 0;
+  visibility: hidden;
+  text-align: center;
+}
+
+.card:hover .content {
+  opacity: 1;
+  visibility: visible;
+}
+
+.card .content h2 {
+  color: #00750e;
+  text-transform: uppercase;
+  font-size: 3.5rem;
+  font-weight: 900;
+}
+
+.card .content p {
+  font-size: 2.5rem;
+}
+
+.card .content a {
+  position: relative;
+  color: #00750e;
+  padding: 1rem 2rem;
+  border-radius: 1rem;
+  background: #FFE000;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to top, #799F0C, #FFE000);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to top, #799F0C, #FFE000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  color: #00750e;
+  text-decoration: none;
+  font-weight: 900;
+}
+
+.backskill {
+  grid-area: 1 / 2 / 2 / 3;
+  border: #11FFBD solid 0rem;
+    background: #070e2a;
+  backdrop-filter: blur(10px);
+  border-radius: 1rem;
+}
+
+.designskill {
+  grid-area: 1 / 3 / 2 / 4;
+  border: #11FFBD solid 0rem;
+    background: #070e2a;
+  box-shadow: rgba(195, 46, 240, 0.38) 5px -5px,
+    rgba(195, 46, 240, 0.3) 10px -10px, rgba(195, 46, 240, 0.2) 15px -15px,
+    rgba(195, 46, 240, 0.1) 20px -20px, rgba(195, 46, 240, 0.05) 25px -15px;
+  backdrop-filter: blur(10px);
+  border-radius: 1rem
 }
