--- a/Portafolio Glassmorphism/Views/index.html
+++ b/Portafolio Glassmorphism/Views/index.html
@@ -68,7 +68,6 @@
     </div>
   </div>
   <!-- Space for arrows -->
-  
   <!-- About me section -->
   <div class="intome">
     <div class="aboutme">
@@ -88,6 +87,33 @@
         <h1>3+</h1>
         <p>Companies worked.</p>
       </div>
+    </div>
+  </div>
+  <!-- Skills -->
+  <div class="skills">
+    <div class="card">
+      <!-- <h2>FrontEnd Skills</h2>
+      <h4>More than 4 years.</h4>
+      <p>HTML</p>
+      <progress max="100" value="75"></progress>
+      <p>CSS</p>
+      <progress max="100" value="50"></progress>
+      <p>JS</p>
+      <progress max="100" value="40"></progress>
+      <p>React</p>
+      <progress max="100" value="40"></progress> -->
+      <div class="circle"></div>
+      <div class="content">
+        <h2>FrontEnd Skills.</h2>
+        <p>More than 4 years.</p>
+        <a href="#">View details</a>
+      </div>
+      <img src="../Assets/daftpunk.gif" alt="">
+    </div>
+    <div class="backskill">
+
+    </div>
+    <div class="designskill">
     </div>
   </div>
 </body>
