Questions about colors in the cards

--- a/Portafolio Glassmorphism/Views/index.html
+++ b/Portafolio Glassmorphism/Views/index.html
@@ -62,9 +62,9 @@
       </div>
     </div>
     <div class="description">
-    <div class="desc">
-      <p>Initial level experience in web design and development <br> knowledge, production quality work.</p>
-    </div>
+      <div class="desc">
+        <p>Initial level experience in web design and development <br> knowledge, production quality work.</p>
+      </div>
     </div>
   </div>
   <!-- Space for arrows -->
@@ -72,7 +72,8 @@
   <div class="intome">
     <div class="aboutme">
       <h1>ABOUT ME.</h1>
-      <p>Initial web developer in the work space with the purpose of contributing <br> to large projects locally and globally.</p>
+      <p>Initial web developer in the work space with the purpose of contributing <br> to large projects locally and
+        globally.</p>
     </div>
     <div class="genInfo">
       <div class="info">
@@ -108,13 +109,27 @@
         <p>More than 4 years.</p>
         <a href="#">View details</a>
       </div>
-      <img src="../Assets/daftpunk.gif" alt="">
+      <img src="../Assets/svg3.svg" alt="">
     </div>
-    <div class="backskill">
-
+    <div class="card">
+      <div class="circle"></div>
+      <div class="content">
+        <h2>FrontEnd Skills.</h2>
+        <p>More than 4 years.</p>
+        <a href="#">View details</a>
+      </div>
+      <img src="../Assets/svg1.svg" alt="">
     </div>
-    <div class="designskill">
+    <div class="card">
+      <div class="circle"></div>
+      <div class="content">
+        <h2>FrontEnd Skills.</h2>
+        <p>More than 4 years.</p>
+        <a href="#">View details</a>
+      </div>
+      <img src="../Assets/svg2.svg" alt="">
     </div>
   </div>
 </body>
+
 </html>
