--- a/Portafolio Glassmorphism/Styles/index.css
+++ b/Portafolio Glassmorphism/Styles/index.css
@@ -225,9 +225,17 @@ body {
 }
 
 .aboutme h1 {
-  background: #34e89e;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #0f3443, #34e89e);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #0f3443, #34e89e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #34e89e; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #0f3443,
+    #34e89e
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #0f3443,
+    #34e89e
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   filter: brightness(1.75);
@@ -239,9 +247,17 @@ body {
 .aboutme p {
   font-size: 2rem;
   margin-left: 2rem;
-  background: #34e89e;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to left, #0f3443, #34e89e);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to left, #0f3443, #34e89e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #34e89e; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to left,
+    #0f3443,
+    #34e89e
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to left,
+    #0f3443,
+    #34e89e
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   filter: brightness(1.75);
@@ -263,9 +279,17 @@ body {
 
 .genInfo .info h1 {
   font-size: 6rem;
-  background: #AAFFA9;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to bottom, #11FFBD, #AAFFA9);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to bottom, #11FFBD, #8dd48b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #aaffa9; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to bottom,
+    #11ffbd,
+    #aaffa9
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to bottom,
+    #11ffbd,
+    #8dd48b
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   filter: brightness(1.75);
@@ -273,9 +297,17 @@ body {
 
 .genInfo .info p {
   font-size: 3rem;
-  background: #AAFFA9;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to top, #11FFBD, #AAFFA9);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to top, #11FFBD, #8dd48b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #aaffa9; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to top,
+    #11ffbd,
+    #aaffa9
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to top,
+    #11ffbd,
+    #8dd48b
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   filter: brightness(1.75);
@@ -316,23 +348,45 @@ body {
 }
 
 .card .circle::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: #FFE000;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #799F0C, #FFE000);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #799F0C, #FFE000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #8a2387; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to bottom,
+    #fd6304,
+    #f916aa,
+    #5c0975
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to bottom,
+    #fd6304,
+    #f916aa,
+    #540066
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  opacity: 0.8;
   clip-path: circle(120px at center);
   transition: 0.5s;
 }
 
 .card:hover .circle:before {
-  background: #FFE000;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #799F0C, #FFE000);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #799F0C, #FFE000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #8a2387; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to bottom,
+    #fd6304,
+    #f916aa,
+    #5c0975
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to bottom,
+    #fd6304,
+    #f916aa,
+    #540066
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  filter: blur(10px);
   clip-path: circle(800px at center);
 }
 
@@ -344,12 +398,11 @@ background: linear-gradient(to right, #799F0C, #FFE000); /* W3C, IE 10+/ Edge, F
   height: 30rem;
   pointer-events: none;
   transition: 0.5s;
-  filter: brightness(1.5);
 }
 
 .card:hover img {
-  top: 100%;
-  height: 30rem;
+  top: 80%;
+  height: 35rem;
 }
 
 .card .content {
@@ -358,7 +411,7 @@ background: linear-gradient(to right, #799F0C, #FFE000); /* W3C, IE 10+/ Edge, F
   top: 0;
   left: 12.5%;
   /* width: 50%; */
-  padding: 2rem  2rem 2rem 2rem;
+  padding: 2rem 2rem 2rem 2rem;
   transition: 0.5s;
   opacity: 0;
   visibility: hidden;
@@ -371,7 +424,8 @@ background: linear-gradient(to right, #799F0C, #FFE000); /* W3C, IE 10+/ Edge, F
 }
 
 .card .content h2 {
-  color: #00750e;
+  color: #cfdef3;
+  filter: brightness(1.75);
   text-transform: uppercase;
   font-size: 3.5rem;
   font-weight: 900;
@@ -383,32 +437,28 @@ background: linear-gradient(to right, #799F0C, #FFE000); /* W3C, IE 10+/ Edge, F
 
 .card .content a {
   position: relative;
-  color: #00750e;
+  color: #ffffff;
   padding: 1rem 2rem;
   border-radius: 1rem;
-  background: #FFE000;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to top, #799F0C, #FFE000);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to top, #799F0C, #FFE000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  color: #00750e;
   text-decoration: none;
   font-weight: 900;
 }
 
 .backskill {
   grid-area: 1 / 2 / 2 / 3;
-  border: #11FFBD solid 0rem;
-    background: #070e2a;
+  border: #11ffbd solid 0rem;
+  background: #070e2a;
   backdrop-filter: blur(10px);
   border-radius: 1rem;
 }
 
 .designskill {
   grid-area: 1 / 3 / 2 / 4;
-  border: #11FFBD solid 0rem;
-    background: #070e2a;
+  border: #11ffbd solid 0rem;
+  background: #070e2a;
   box-shadow: rgba(195, 46, 240, 0.38) 5px -5px,
     rgba(195, 46, 240, 0.3) 10px -10px, rgba(195, 46, 240, 0.2) 15px -15px,
     rgba(195, 46, 240, 0.1) 20px -20px, rgba(195, 46, 240, 0.05) 25px -15px;
   backdrop-filter: blur(10px);
-  border-radius: 1rem
+  border-radius: 1rem;
 }
