--- a/Portafolio Glassmorphism/Views/index.html
+++ b/Portafolio Glassmorphism/Views/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../Styles/index.css">
   <link rel="stylesheet" href="../Styles/normalize.css">
+  <link rel="icon" href="../Assets/LOGOAV.svg">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;400&display=swap');
   </style>
@@ -106,26 +107,37 @@
       <div class="circle"></div>
       <div class="content">
         <h2>FrontEnd Skills.</h2>
-        <p>More than 4 years.</p>
-        <a href="#">View details</a>
+        <h3>More than 4 years.</h3>
+        <p>HTML</p>
+        <p>CSS</p>
+        <p>JavaScript</p>
+        <p>React</p>
+        <a href="#">View in CV</a>
       </div>
       <img src="../Assets/svg3.svg" alt="">
     </div>
     <div class="card">
       <div class="circle"></div>
       <div class="content">
-        <h2>FrontEnd Skills.</h2>
-        <p>More than 4 years.</p>
-        <a href="#">View details</a>
+        <h2>BackEnd Skills.</h2>
+        <h3>More than 2 years.</h3>
+        <p>MySQL</p>
+        <p>Python</p>
+        <p>Node</p>
+        <a href="#">View in CV</a>
       </div>
       <img src="../Assets/svg1.svg" alt="">
     </div>
     <div class="card">
       <div class="circle"></div>
       <div class="content">
-        <h2>FrontEnd Skills.</h2>
-        <p>More than 4 years.</p>
-        <a href="#">View details</a>
+        <h2>Design Skills.</h2>
+        <h3>More than 4 years.</h3>
+        <p>Figma</p>
+        <p>Photoshop</p>
+        <p>Illustrator</p>
+        <p>Spline</p>
+        <a href="#">View in CV</a>
       </div>
       <img src="../Assets/svg2.svg" alt="">
     </div>
