--- a/Portafolio Glassmorphism/Views/index.html
+++ b/Portafolio Glassmorphism/Views/index.html
@@ -11,6 +11,7 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;400&display=swap');
   </style>
+  <script src="../Functions/index.js"></script>
   <title>My space</title>
 </head>
 
