Started responsive work :D

--- a/Portafolio Glassmorphism/Styles/index.css
+++ b/Portafolio Glassmorphism/Styles/index.css
@@ -42,10 +42,41 @@ body {
   font-weight: 100;
 }
 
+@media (max-width: 768px) {
+  .navbar {
+    width: 100%;
+    max-width: 768px;
+  }
+}
+
+@media (max-width: 480px) {
+  .navbar {
+    width: 100%;
+    max-width: 480px;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
 .navbar .logo a img {
   width: 20rem;
   height: 12rem;
   opacity: 1.5;
+}
+
+@media (max-width: 768px) {
+  .navbar .logo a img {
+    width: 10rem;
+    height: 6rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .navbar .logo a img {
+    width: 8rem;
+    height: 5rem;
+    margin-bottom: 1rem;
+  }
 }
 
 .navbar .navLinks {
@@ -55,6 +86,18 @@ body {
   justify-content: space-around;
 }
 
+@media (max-width: 768px) {
+  .navbar .navLinks {
+    width: 75%;
+  }
+}
+
+@media (max-width: 480px) {
+  .navbar .navLinks {
+    width: 80%;
+  }
+}
+
 .navbar .navLinks a {
   font-size: 2rem;
   font-weight: 400;
@@ -62,6 +105,19 @@ body {
   text-decoration: none;
   opacity: 0.5;
   box-shadow: 0 8px 32px 0 rgba(20, 41, 123, 0.35);
+}
+
+@media (max-width: 768px) {
+  .navbar .navLinks a {
+    font-size: 1.8rem;
+    opacity: 1;
+  }
+}
+
+@media (max-width: 480px) {
+  .navbar .navLinks a {
+    font-size: 1.3rem;
+  }
 }
 
 .navbar .navLinks a:hover {
@@ -89,6 +145,21 @@ body {
   border-radius: 0rem;
 }
 
+@media (max-width: 768px) {
+  .parent {
+    width:90%;
+    grid-template-columns: 1fr 0.25fr;
+    grid-template-rows: 1fr;
+    grid-column-gap: 10px;
+  }
+}
+
+@media (max-width: 480px) {
+  .parent {
+    display: flex;
+  }
+}
+
 .parent .title {
   grid-area: 1 / 1 / 3 / 2;
   display: flex;
@@ -96,6 +167,12 @@ body {
   justify-content: left;
   margin-left: 2rem;
   position: relative;
+}
+
+@media (max-width: 768px) {
+  .parent .title {
+    grid-area: 1 / 1 / 2 / 2;
+  }
 }
 
 .title .mainTitle {
@@ -120,6 +197,12 @@ body {
   filter: brightness(1.75);
 }
 
+@media (max-width: 768px) {
+  .title .mainTitle {
+    font-size: 7rem;
+  }
+}
+
 .title .mainTitleGlass {
   position: absolute;
   font-size: 10rem;
@@ -132,6 +215,12 @@ body {
   opacity: 0.8;
 }
 
+@media (max-width: 768px) {
+  .title .mainTitleGlass {
+    font-size: 7rem;
+  }
+}
+
 .parent .subtitle {
   grid-area: 1 / 2 / 2 / 3;
   position: relative;
@@ -139,6 +228,14 @@ body {
   justify-content: right;
   align-items: end;
   margin-right: 2rem;
+}
+
+@media (max-width: 768px) {
+  .parent .subtitle {
+    grid-area: 1 / 2 / 2 / 3;
+    align-items: start;
+    justify-content: center;
+  }
 }
 
 .subtitle .subTitle {
@@ -161,6 +258,15 @@ body {
   filter: brightness(1.75);
 }
 
+@media (max-width: 768px) {
+  .subtitle .subTitle {
+    font-size: 6rem;
+    writing-mode: vertical-rl;
+    text-orientation: sideways;
+    top: 8rem;
+  }
+}
+
 .subtitle .subTitleGlass {
   position: absolute;
   right: -0.4rem;
@@ -172,6 +278,16 @@ body {
   opacity: 0.9;
   font-weight: 900;
   margin-left: 0.25rem;
+}
+
+@media (max-width: 768px) {
+  .subtitle .subTitleGlass {
+    font-size: 6rem;
+    writing-mode: vertical-rl;
+    text-orientation: sideways;
+    top: 8.2rem;
+    right: -0.2rem;
+  }
 }
 
 .parent .description {
