--- a/Portafolio Glassmorphism/Views/index.html
+++ b/Portafolio Glassmorphism/Views/index.html
@@ -133,5 +133,11 @@
       <img src="../Assets/svg2.svg" alt="">
     </div>
   </div>
+  <section>
+    <iframe class="playerSpotify" style="border-radius:0px" text-align = "center"
+      src="https://open.spotify.com/embed/album/4mAhdh996uW5SnnFKXUmC0?utm_source=generator" width="90%" height="352"
+      frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+      loading="lazy"></iframe>
+  </section>
 </body>
 </html>
